Re-jig chapters

--- a/appendices.tex
+++ b/appendices.tex
@@ -1,15 +1,14 @@
-\include{appendix_wrf_lem}
 
 \chapter{Code availability}
 
 \chapter{Key code and algorithms for the cellular automaton LEM}
 
-\chapter{Key components and algorithms for the additions to the CHILD model}
+\chapter{Configuration of the WRF model for the simulation of the North York Moors storm}
 
 %\chapter{Modifications made to the Weather Research and Forecasting model (WRF)}
 
 %\chapter{A one-way coupling framework for the WRF-CHILD model}
 
-\chapter{Cluster computing simulations: set-up, compilation, and scaling}
+%\chapter{Cluster computing simulations: set-up, compilation, and scaling}
 
-\chapter{Paper off-prints may also be attached with a traditional-format thesis}
+%\chapter{Paper off-prints may also be attached with a traditional-format thesis}
