--- a/thesis.tex
+++ b/thesis.tex
@@ -9,7 +9,7 @@
 \documentclass[12pt,oneside,PhD]{muthesis}
 
 % Use this command to output a single chapter
-\includeonly{chapter6}
+%\includeonly{chapter6}
 
 \usepackage{rotating}
 \usepackage[labelfont=bf]{caption}
@@ -208,6 +208,8 @@
 
 % Comment the following THREE lines if you do NOT have an Appendix
 \appendix
+\include{appendix_wrf_lem}
+
 \include{appendices}
 .........
 
